# sber_tz

./: .gitignore  Dockerfile  README.md  cronfile  docker-compose.yml  manage.py  middleware.py  pyproject.toml
market_app/: documents.py  urls.py
market_app/data_access_layer/: queries.py
market_app/management/commands/: transferproduct.py
market_app/migrations/: 0001_initial.py  0003_rename_client_purchase_client_id_and_more.py  0004_rename_client_id_purchase_client_and_more.py  0005_remove_purchase_purchase_date.py  0006_alter_product_description.py
market_app/models/: __init__.py  client.py  product.py  purchase.py
market_app/serializers/: __init__.py  product.py  purchase.py
market_app/views/: __init__.py  paginated_elastic_search.py  product.py  purchase.py
sber_sells/: asgi.py  settings.py
sber_sells/market_app/: admin.py  documents.py  etl.py  models.py  serializers.py  urls.py  views.py
sber_sells/market_app/data_access_layer/: queries.py
sber_sells/market_app/migrations/: 0002_product_description.py
sber_sells/market_app/serializers/: client.py  product.py  purchase.py
sber_sells/sber_sells/: settings.py  urls.py  wsgi.py
